[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stacks-agent-protocol"
version = "1.0.0"
description = "A comprehensive agent for interacting with the Stacks blockchain using LangChain and Claude AI"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Stacks Agent Protocol Team", email = "info@stacksagentprotocol.com"}
]
maintainers = [
    {name = "Stacks Agent Protocol Team", email = "info@stacksagentprotocol.com"}
]
keywords = ["stacks", "blockchain", "agent", "langchain", "claude", "ai", "cryptocurrency", "defi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.8"
dependencies = [
    "langchain>=0.1.0",
    "langchain-anthropic>=0.1.0",
    "pymongo>=4.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
]
streamlit = [
    "streamlit>=1.28.0",
]
all = [
    "stacks-agent-protocol[dev,streamlit]",
]

[project.urls]
Homepage = "https://github.com/stacks-agent-protocol/stacks-agent-protocol"
Documentation = "https://docs.stacksagentprotocol.com"
Repository = "https://github.com/stacks-agent-protocol/stacks-agent-protocol.git"
"Bug Tracker" = "https://github.com/stacks-agent-protocol/stacks-agent-protocol/issues"

[project.scripts]
sap-agent = "stacks_agent_protocol:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["stacks_agent_protocol*"]

[tool.setuptools.package-data]
stacks_agent_protocol = ["*.md", "*.txt", "*.json"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"